[Blink] Don't center images in Android WebViews

Android WebViews currently get into a loop where Blink's
ImageDocument::windowSizeChanged() is called, causing
WebViews to be resized larger, causing Blink's
windowSizeChanged() to be called.

Instead of using a different height for the calculation,
it was decided on the bug that Android WebViews shouldn't
return true for shouldShrinkToFit(), treating them similarly
to non-main frames.

BUG=679709

Review-Url: https://codereview.chromium.org/2646663002
Cr-Commit-Position: refs/heads/master@{#444842}

Former-commit-id: 684507d88c125e0ea9077787e94328ced875eae3