third_party/WebKit/Source/core/html/ImageDocument.h
@@ -53,6 +53,7 @@ class CORE_EXPORT ImageDocument final : public HTMLDocument {
   void imageClicked(int x, int y);
   void imageLoaded();
   void updateImageStyle();
+  bool shouldShrinkToFit() const;
 
   DECLARE_VIRTUAL_TRACE();
 
@@ -70,7 +71,6 @@ class CORE_EXPORT ImageDocument final : public HTMLDocument {
   void resizeImageToFit();
   void restoreImageSize();
   bool imageFitsInWindow() const;
-  bool shouldShrinkToFit() const;
   // Calculates the image size multiplier that's needed to fit the image to
   // the window, taking into account page zoom and device scale.
   float scale() const;
